--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,8 +153,10 @@ body {
 }
 
 .logos-section {
-    background-color: #F9FAFA;
+    background-color: rgba(217, 218, 218, 0.945);
     text-align: center;
+    padding: 20px;
+    padding-bottom: 30px;
 }
 
 .logos {
@@ -164,9 +166,8 @@ body {
 
 .features-section {
     padding-top: 40px;
-    padding-bottom: 80px;
-    text-align: center;
-    padding-bottom: 90px;
+    padding-bottom: 40px;
+    text-align: center; 
     position: relative;
 }
 
@@ -500,11 +501,19 @@ ul {
 .social-links {
     text-align: center;
     padding-top: 5px;
+    padding-right: 10px;
 }
 
 .social-link {
     margin-right: 15px;
 }
+
+.social-link-txt {
+    padding: 0 12px 0 12px;
+    color: black;
+}
+
+.darken { filter: brightness(0.1); }
 
 .strips {
     position: absolute;
