--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -3,35 +3,43 @@ box-sizing: border-box;
 }
 
 body {
-    background-color: #111111;
-    padding: 20px;
 }
 
 /* Center website */
 .main {
-    max-width: 1000px;
+    max-width: 600px;
     margin: auto;
 }
 
+.playmakers-logo {
+    text-align: center;
+    margin-bottom: -30px;
+    padding-top: 20px
+}
+
 h1 {
-    color: #ffffff;
+    color: #111111;
+    text-align: center;
+    font-size: 120px;
 }
 
 h2 {
+    background-color: #111111;
     word-break: break-all;
     color: #f0bba3;
-    padding-left: 20px;
-    padding-top: 10px;  
+    padding: 10px;
+    text-align: center
 }
 
 .row {
-margin: 8px -16px;
+    margin-left: 60px;
+    margin-right: 60px;
 }
 
 /* Add padding BETWEEN each column (if you want) */
 .row,
 .row > .column {
-    padding: 8px;
+    padding: 0px;
 }
 
 /* Create four equal columns that floats next to each other */
@@ -49,23 +57,23 @@ margin: 8px -16px;
 
 /* Content */
 .content {
-    /* background-color: #f0bba3; */
-    padding: 18px;
-    margin: 0px;
+    /* background-color: #4d4444; */
+    padding: 10px;
+    text-align: center;
 }
 
 /* Responsive layout - makes a two column-layout instead of four columns */
 @media screen and (max-width: 900px) {
-.column {
-    width: 50%;
-}
+    .column {
+        width: 50%;
+    }
 }
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
-.column {
-    width: 100%;
-}
+    .column {
+        width: 100%;
+    }
 }
 
 .logo-link {
@@ -75,4 +83,17 @@ margin: 8px -16px;
 
 .tiny-link {
     font-size: 10px;
+}
+
+.game-iframe {
+    height: 167;
+    width: 100%;
+}
+
+a {
+    color: #f0bba3;
+}
+
+a .hover {
+    color: #f05757
 }
