Blog preview and styling

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -2,24 +2,52 @@
 	ALL STYLING FOR blog.html and blog entries
 */
 
-
 .blog-preview {
-
 }
 
 .blog-preview-metadata {
-	display: inline;
+	display: inline-flex;
+	flex-direction: row;
+	border-bottom: 1px solid black;
+	margin-left: 8px;
+}
+
+.blog-preview-metadata p {
+	margin-right: 50px;
+	text-transform: uppercase;
+	font-size: 1.5em;
+	flex-shrink: 1;
+}
+
+.blog-preview-metadata-date {
+	opacity: 0.85;
+}
+
+.blog-preview-metadata-title {
+	font-weight: bold;
 }
 
 .blog-preview-content {
 	display: flex;
 	flex-direction: row;
+	align-items: center;
 }
 
-.blog-preview-content img {
-	width: 100%
+.blog-preview-content a img {
+	width: 100%;
+}
+
+.blog-preview-content a {
+	width: 50%;
+	padding: 8px 8px;
 }
 
 .blog-preview-content p {
 	text-align: center;
+}
+
+.blog-preview-content-text {
+	text-align: justify;
+	font-size: 1.25em;
+	padding: 0px 25px;
 }
