--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,87 +1,95 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700');
+@import url("https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700");
 
 body {
-    font-family: 'Montserrat', sans-serif;
+	font-family: "Montserrat", sans-serif;
 }
 
 .navbar-item {
-    color: #ffffff;
-    /* height: 50px; */
-    margin-right: 6px;
-    text-decoration: none;
-    /* background: rgba(107, 24, 24, 0.3); */
+	color: #ffffff;
+	/* height: 50px; */
+	margin-right: 6px;
+	text-decoration: none;
+	/* background: rgba(107, 24, 24, 0.3); */
 }
 
 .navbar-item:hover {
-    color: #f75858;
-    text-decoration: none;
-    background: rgba(184, 61, 61, 0.3);
-    /* background: rgba(54, 28, 16, 0.3); */
+	color: #f75858;
+	text-decoration: none;
+	background: rgba(184, 61, 61, 0.3);
+	/* background: rgba(54, 28, 16, 0.3); */
 }
 
 .hero-background {
-    overflow: hidden;
-    position: relative;
-    max-height: 590px;
+	overflow: hidden;
+	position: relative;
+	/* max-height: 590px;
     /* background: rgb(218, 82, 82); */
-    background: -webkit-linear-gradient(117deg, rgb(240, 96, 96), rgb(122, 23, 23));
-    background: linear-gradient(117deg, rgb(240, 96, 96), rgb(122, 23, 23));
-    background: -webkit-radial-gradient(rgb(240, 96, 96), rgb(122, 23, 23));
-    background: radial-gradient(rgb(240, 96, 96), rgb(122, 23, 23));
+	background: -webkit-linear-gradient(
+		117deg,
+		rgb(240, 96, 96),
+		rgb(122, 23, 23)
+	);
+	background: linear-gradient(117deg, rgb(240, 96, 96), rgb(122, 23, 23));
+	background: -webkit-radial-gradient(rgb(240, 96, 96), rgb(122, 23, 23));
+	background: radial-gradient(rgb(240, 96, 96), rgb(122, 23, 23));
 }
 
 .secondary-background {
-    overflow: hidden;
-    position: relative;
-    /* background: rgb(218, 82, 82); */
-    background: -webkit-linear-gradient(117deg, rgb(240, 96, 96), rgb(167, 47, 47));
-    background: linear-gradient(117deg, rgb(240, 96, 96), rgb(167, 47, 47));
-    background: -webkit-radial-gradient(rgb(240, 96, 96), rgb(167, 47, 47));
-    background: radial-gradient(rgb(240, 96, 96), rgb(167, 47, 47));
+	overflow: hidden;
+	position: relative;
+	/* background: rgb(218, 82, 82); */
+	background: -webkit-linear-gradient(
+		117deg,
+		rgb(240, 96, 96),
+		rgb(167, 47, 47)
+	);
+	background: linear-gradient(117deg, rgb(240, 96, 96), rgb(167, 47, 47));
+	background: -webkit-radial-gradient(rgb(240, 96, 96), rgb(167, 47, 47));
+	background: radial-gradient(rgb(240, 96, 96), rgb(167, 47, 47));
 }
 
 .bold {
-    font-weight: 600;
+	font-weight: 600;
 }
 
 .light {
-    font-weight: 300;
+	font-weight: 300;
 }
 
 .hero-container {
-    margin: 60px;
-    margin-top: 100px;
+	margin: 60px;
+	margin-top: 100px;
 }
 
 .hero-column {
-    color: #fff;
-    /* text-align: center; */
-    margin: 10px;
-    height: 100%;
-    position: relative;
+	color: #fff;
+	/* text-align: center; */
+	margin: 10px;
+	height: 100%;
+	position: relative;
 }
 
 .hc-mid {
-    max-width: 30%;
-    margin-top: auto;
-    margin-bottom: auto;
-    text-align: center;
+	max-width: 30%;
+	margin-top: auto;
+	margin-bottom: auto;
+	text-align: center;
 }
 
 .hc-left {
-    float: left;
-    width: 30%;
+	float: left;
+	width: 30%;
 }
 
 .hc-right {
-    float: right;
-    width: 25%;
+	float: right;
+	width: 25%;
 }
 
 .logo {
-    max-width: 100px;
-    padding-left: 0;
-    padding-top: 5px;
+	max-width: 100px;
+	padding-left: 0;
+	padding-top: 5px;
 }
 
 /* .header-btn {
@@ -107,495 +115,493 @@ body {
 } */
 
 .hero {
-    position: relative;
-    /* z-index: 999; */
-    padding-bottom: 60px;
+	position: relative;
+	/* z-index: 999; */
+	padding-bottom: 60px;
 }
 
 .mouse {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 85%;
-    margin: auto;
-    padding-bottom: 40px;
-    text-align: center;
-    cursor: pointer;
-    transition: transform .4s ease;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 85%;
+	margin: auto;
+	padding-bottom: 40px;
+	text-align: center;
+	cursor: pointer;
+	transition: transform 0.4s ease;
 }
 
 .mouse:hover {
-    transform: translateY(5px);
+	transform: translateY(5px);
 }
 
 .macbook {
-    margin: auto;
-    padding-bottom: 35px;
+	margin: auto;
+	padding-bottom: 35px;
 }
 
-
 .ipad {
-    display: none;
+	display: none;
 }
 
 .ipad-screen {
-    display: none;
+	display: none;
 }
 
 .hero-btn {
-    -webkit-transition-duration: 0.4s;
-    transition-duration: 0.4s;
-    background-color: rgb(0,0,0);
-    border-radius: 10px;
-    border: 0px solid rgb(212, 64, 19);
-    width: 210px;
-    height: 51px;
-    color: white;
-    margin: 5px auto;
+	-webkit-transition-duration: 0.4s;
+	transition-duration: 0.4s;
+	background-color: rgb(0, 0, 0);
+	border-radius: 10px;
+	border: 0px solid rgb(212, 64, 19);
+	width: 210px;
+	height: 51px;
+	color: white;
+	margin: 5px auto;
 }
 
 .hero-btn:hover {
-    background-color: rgb(252, 108, 64);
-    color: white;
-    border-radius: 20px;
-    -webkit-box-shadow: -1px 9px 46px -17px rgba(43, 43, 43, 1);
-    -moz-box-shadow: -1px 9px 46px -17px rgba(43, 43, 43, 1);
-    box-shadow: -1px 9px 46px -17px rgba(43, 43, 43, 1);
+	background-color: rgb(252, 108, 64);
+	color: white;
+	border-radius: 20px;
+	-webkit-box-shadow: -1px 9px 46px -17px rgba(43, 43, 43, 1);
+	-moz-box-shadow: -1px 9px 46px -17px rgba(43, 43, 43, 1);
+	box-shadow: -1px 9px 46px -17px rgba(43, 43, 43, 1);
 }
 
 .header-headline {
-    padding-top: 0;
-    padding-bottom: 15px;
-    text-align: center;
+	padding-top: 0;
+	padding-bottom: 15px;
+	text-align: center;
 }
 
 .logos-section {
-    background-color: #222222;
-    /* z-index: 9; */
-    text-align: center;
-    padding: 10px;
+	background-color: #222222;
+	/* z-index: 9; */
+	text-align: center;
+	padding: 10px;
 }
 
 .logos {
-    padding: 30px;
-    max-width: 100%;
+	padding: 30px;
+	max-width: 100%;
 }
 
 .features-section {
-    padding-top: 40px;
-    padding-bottom: 40px;
-    text-align: center; 
-    position: relative;
+	padding-top: 40px;
+	padding-bottom: 40px;
+	text-align: center;
+	position: relative;
 }
 
 .features-headline {
-    color: white;
-    padding-bottom: 15px;
+	color: white;
+	padding-bottom: 15px;
 }
 
 .features-container {
-    max-width: 830px;
-    margin: auto;
+	max-width: 830px;
+	margin: auto;
 }
 
 .feature {
-    text-align: center;
-    padding: 15px;
+	text-align: center;
+	padding: 15px;
 }
 
 .feature-no-display {
-    opacity: 0;
-    -webkit-transform: translateY(15%) translateZ(0);
-    -moz-transform: translateY(15%) translateZ(0);
-    transform: translateY(15%) translateZ(0);
-    -webkit-transition: -webkit-transform 0.4s ease-out, opacity 0.4s ease;
-    -moz-transition: -moz-transform 0.4s ease-out, opacity 0.4s ease;
-    -o-transition: -o-transform 0.4s ease-out, opacity 0.4s ease;
-    transition: transform 0.4s ease-out, opacity 0.4s ease;
+	opacity: 0;
+	-webkit-transform: translateY(15%) translateZ(0);
+	-moz-transform: translateY(15%) translateZ(0);
+	transform: translateY(15%) translateZ(0);
+	-webkit-transition: -webkit-transform 0.4s ease-out, opacity 0.4s ease;
+	-moz-transition: -moz-transform 0.4s ease-out, opacity 0.4s ease;
+	-o-transition: -o-transform 0.4s ease-out, opacity 0.4s ease;
+	transition: transform 0.4s ease-out, opacity 0.4s ease;
 }
 
 .feature-display {
-    opacity: 1;
-    -webkit-transform: translateY(0) translateZ(0);
-    -moz-transform: translateY(0) translateZ(0);
-    transform: translateY(0) translateZ(0);
+	opacity: 1;
+	-webkit-transform: translateY(0) translateZ(0);
+	-moz-transform: translateY(0) translateZ(0);
+	transform: translateY(0) translateZ(0);
 }
 
 .feature-display-mid {
-    transition-delay: 0.15s;
+	transition-delay: 0.15s;
 }
 
 .feature-display-last {
-    transition-delay: 0.30s;
+	transition-delay: 0.3s;
 }
 
 .feature-icon {
-    background-color: white;
-    border-radius: 50%;
-    height: 5.625em;
-    width: 5.625em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    box-shadow: 4px 14px 28px #393939;
+	background-color: white;
+	border-radius: 50%;
+	height: 5.625em;
+	width: 5.625em;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: auto;
+	box-shadow: 4px 14px 28px #393939;
 }
 
 .feature-head-text {
-    color: white;
-    padding-top: 15px;
+	color: white;
+	padding-top: 15px;
 }
 
 .feature-subtext {
-    color: white;
-    padding-top: 0;
+	color: white;
+	padding-top: 0;
 }
 
 .feature-img {
-    max-width: 23px;
+	max-width: 23px;
 }
 
 .white-section {
-    max-width: 1400px;
-    margin: auto;
-    overflow: hidden;
-    background: rgb(243, 241, 241);
-
+	max-width: 1400px;
+	margin: auto;
+	overflow: hidden;
+	background: rgb(243, 241, 241);
 }
 
 .white-section-text {
-    text-align: center;
+	text-align: center;
 }
 
 .imac {
 }
 
 .imac-section-header {
-    padding-bottom: 35px;
+	padding-bottom: 35px;
 }
 
 .imac-section-desc {
-    text-align: center;
-    font-weight: 300;
-    font-size: 24px;
-    line-height: 40px;
-    max-width: 400px;
-    margin: auto;
-    padding-bottom: 40px;
+	text-align: center;
+	font-weight: 300;
+	font-size: 24px;
+	line-height: 40px;
+	max-width: 400px;
+	margin: auto;
+	padding-bottom: 40px;
 }
 
 .imac-screen {
-    padding-top: 60px;
-    padding-bottom: 40px;
-    min-width: 60%;
-    background: white;
+	padding-top: 60px;
+	padding-bottom: 40px;
+	min-width: 60%;
+	background: white;
 }
 
 .macbook {
-    position: relative;
-    z-index: 999;
+	position: relative;
+	z-index: 999;
 }
 
 .pricing-background {
-    background-color: #F8F9F9;
+	background-color: #f8f9f9;
 }
 
 .pricing-section-header {
-    padding-top: 75px;
+	padding-top: 75px;
 }
 
 .pricing-section-sub {
-    padding-top: 10px;
-    color: grey;
+	padding-top: 10px;
+	color: grey;
 }
 
 .pricing-table {
-    padding: 0 0 100px;
-    max-width: 1050px;
-    margin: auto;
+	padding: 0 0 100px;
+	max-width: 1050px;
+	margin: auto;
 }
 
 .plan {
-    text-align: center;
-    max-width: 390px;
-    margin: auto;
-    height: 430px;
-    padding: 36px 15px 45px;
-    position: relative;
+	text-align: center;
+	max-width: 390px;
+	margin: auto;
+	height: 430px;
+	padding: 36px 15px 45px;
+	position: relative;
 }
 
 .mid-plan {
-    text-align: center;
-    max-width: 390px;
-    margin: auto;
-    height: 430px;
-    padding: 36px 15px 45px;
-    position: relative;
-    box-shadow: 5px 8.7px 40px rgba(99, 117, 138, 0.3);
-    border-radius: 7px;
+	text-align: center;
+	max-width: 390px;
+	margin: auto;
+	height: 430px;
+	padding: 36px 15px 45px;
+	position: relative;
+	box-shadow: 5px 8.7px 40px rgba(99, 117, 138, 0.3);
+	border-radius: 7px;
 }
 
 ul {
-    list-style-type: none;
+	list-style-type: none;
 }
 
 .plan li {
-    position: relative;
+	position: relative;
 }
 
-.plan li::before, .mid-plan li:before {
-    font-family: Material Icons;
-    content: "check";
-    color: #3aeb8c;
-    position: absolute;
-    left: -10px;
-    position: relative;
-
+.plan li::before,
+.mid-plan li:before {
+	font-family: Material Icons;
+	content: "check";
+	color: #3aeb8c;
+	position: absolute;
+	left: -10px;
+	position: relative;
 }
 
 .plan-title {
-    font-size: 18px;
-    padding-bottom: 5px;
+	font-size: 18px;
+	padding-bottom: 5px;
 }
 
 .plan-cost {
-    font-size: 45px;
+	font-size: 45px;
 }
 
 .plan-cost::before {
-    content: "$";
+	content: "$";
 }
 
 .monthly {
-    font-size: 12px;
-    padding-bottom: 20px;
+	font-size: 12px;
+	padding-bottom: 20px;
 }
 
 .plan-features {
-    -webkit-padding-start: 0;
+	-webkit-padding-start: 0;
 }
 
 .plan-btn {
-    background-color: #dd4747;
-    border-radius: 10px;
-    border: #dd4747;
-    width: 164px;
-    height: 51px;
-    color: white;
-    -webkit-transition-duration: 0.4s;
-    transition-duration: 0.4s;
-    display: block;
-    padding: 15px;
-    margin: auto;
-    position: absolute;
-    left: calc(50% - 82px);
-    bottom: 50px;
+	background-color: #dd4747;
+	border-radius: 10px;
+	border: #dd4747;
+	width: 164px;
+	height: 51px;
+	color: white;
+	-webkit-transition-duration: 0.4s;
+	transition-duration: 0.4s;
+	display: block;
+	padding: 15px;
+	margin: auto;
+	position: absolute;
+	left: calc(50% - 82px);
+	bottom: 50px;
 }
 
 .plan-btn:hover {
-    background-color: #58d5f7;
-    color: white;
-    border-radius: 20px;
-    -webkit-box-shadow: -1px 9px 46px -17px rgba(43, 43, 43, 1);
-    -moz-box-shadow: -1px 9px 46px -17px rgba(43, 43, 43, 1);
-    box-shadow: -1px 9px 46px -17px rgba(43, 43, 43, 1);
+	background-color: #58d5f7;
+	color: white;
+	border-radius: 20px;
+	-webkit-box-shadow: -1px 9px 46px -17px rgba(43, 43, 43, 1);
+	-moz-box-shadow: -1px 9px 46px -17px rgba(43, 43, 43, 1);
+	box-shadow: -1px 9px 46px -17px rgba(43, 43, 43, 1);
 }
 
 .team {
-    padding-bottom: 0px;
-    padding-top: 18px;
+	padding-bottom: 0px;
+	padding-top: 18px;
 }
 
 .team-container {
-    text-align: center;
-    margin: auto;
-    max-width: 920px;
+	text-align: center;
+	margin: auto;
+	max-width: 920px;
 }
 
 .team-section-header {
-    padding-bottom: 60px;
+	padding-bottom: 60px;
 }
 
 .team-member {
-    text-align: center;
-    padding-bottom: 15px;
+	text-align: center;
+	padding-bottom: 15px;
 }
 
 .team-member-position {
-    color: #747474;
+	color: #747474;
 }
 
 .team-member-text {
-    padding-top: 15px;
+	padding-top: 15px;
 }
 
 .team-member-pic {
-    width: 150px;
+	width: 150px;
 }
 
 .team-social-icon {
-    padding: 5px;
+	padding: 5px;
 }
 
 .blue-section {
-    color: white;
-    margin: auto;
-    text-align: center;
-    padding-top: 25px;
-    padding-bottom: 40px;
+	color: white;
+	margin: auto;
+	text-align: center;
+	padding-top: 25px;
+	padding-bottom: 40px;
 }
 
 .blue-section-subtext {
-    max-width: 200px;
-    max-width: 250px;
-    line-height: 22px;
-    font-size: 15px;
-    margin: auto;
+	max-width: 200px;
+	max-width: 250px;
+	line-height: 22px;
+	font-size: 15px;
+	margin: auto;
 }
 
 .email-form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .email-input {
-    background-color: white;
-    border-radius: 10px;
-    border: 1px solid #fff;
-    width: 210px;
-    height: 51px;
-    color: #808080;
-    margin-top: 20px;
-    border: none;
+	background-color: white;
+	border-radius: 10px;
+	border: 1px solid #fff;
+	width: 210px;
+	height: 51px;
+	color: #808080;
+	margin-top: 20px;
+	border: none;
 }
 
 .submit-btn {
-    background-color: rgb(0,0,0);
-    border-radius: 10px;
-    color: #fff;
-    height: 51px;
-    width: 120px;
-    margin-top: 20px;
-    margin-left: 3px;
-    -webkit-transition-duration: 0.4s;
-    /* Safari */
-    transition-duration: 0.4s;
+	background-color: rgb(0, 0, 0);
+	border-radius: 10px;
+	color: #fff;
+	height: 51px;
+	width: 120px;
+	margin-top: 20px;
+	margin-left: 3px;
+	-webkit-transition-duration: 0.4s;
+	/* Safari */
+	transition-duration: 0.4s;
 }
 
 .submit-btn:hover {
-    background-color: rgb(240, 50, 50);
-    color: white;
-    border-radius: 20px;
-    -webkit-box-shadow: -1px 9px 46px -17px rgba(43, 43, 43, 1);
-    -moz-box-shadow: -1px 9px 46px -17px rgb(96, 85, 85);
-    box-shadow: -1px 9px 46px -17px rgba(43, 43, 43, 1);
+	background-color: rgb(240, 50, 50);
+	color: white;
+	border-radius: 20px;
+	-webkit-box-shadow: -1px 9px 46px -17px rgba(43, 43, 43, 1);
+	-moz-box-shadow: -1px 9px 46px -17px rgb(96, 85, 85);
+	box-shadow: -1px 9px 46px -17px rgba(43, 43, 43, 1);
 }
 
 #newsletter-spinner {
-    display: none;
+	display: none;
 }
 
 .email-form-div {
-    max-width: 60px;
-    margin: auto;
+	max-width: 60px;
+	margin: auto;
 }
 
 .footer {
-    background-color: #222222;
-    padding-top: 10px;
-    padding-bottom: 10px;
+	background-color: #222222;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 .webscope-text {
-    color: white;
-    font-size: 12px;
-    padding-right: 7px;
+	color: white;
+	font-size: 12px;
+	padding-right: 7px;
 }
 
 .webscope {
-    text-align: center;
-    margin-top: -5px;
+	text-align: center;
+	margin-top: -5px;
 }
 
 .social-links {
-    text-align: center;
-    padding-top: 5px;
-    padding-right: 10px;
+	text-align: center;
+	padding-top: 5px;
+	padding-right: 10px;
 }
 
 .social-link {
-    margin-right: 15px;
+	margin-right: 15px;
 }
 
 .social-link-txt {
-    padding: 0 12px 0 12px;
-    color: white;
+	padding: 0 12px 0 12px;
+	color: white;
 }
 
-.darken { filter: brightness(0.1); }
+.darken {
+	filter: brightness(0.1);
+}
 
 .strips {
-    position: absolute;
-    max-width: 1280px;
+	position: absolute;
+	max-width: 1280px;
 }
 
 .footer-elem-left {
-    display: inline-block;
-    color:white;
+	display: inline-block;
+	color: white;
 }
 
 .footer-elem-right {
-    color: white;
-    float: right;
+	color: white;
+	float: right;
 }
 
 .off-white {
-    background: #F8F9F9;
+	background: #f8f9f9;
 }
-
 
 /* Small Devices, Tablets */
 @media only screen and (min-width: 333px) {
+	.hc-left {
+		display: block;
+		float: top;
+		text-align: center;
+		width: 100%;
+	}
 
-    .hc-left {
-        display: block;
-        float: top;
-        text-align: center;
-        width: 100%;
-    }
+	.header-headline {
+		text-align: center;
+	}
 
-    .header-headline {
-        text-align: center;
-    }
-    
-    .header-running-text {
-        text-align: center;
-        line-height: 1.5;
-        margin-bottom: 40px;
-    }
+	.header-running-text {
+		text-align: center;
+		line-height: 1.5;
+		margin-bottom: 40px;
+	}
 }
 
 @media only screen and (min-width: 768px) {
-    .hc-mid {
-        display: inline-block;
-    }
-    
-    .hc-left {
-        display: inline-block; 
-        width: 30%;
-        text-align: left;
-    }
-    
-    .header-headline {
-        text-align: left;
-    }
+	.hc-mid {
+		display: inline-block;
+	}
 
-    .header-running-text {
-        text-align: left;
-        line-height: 1.5;
-        padding-right: 60px;
-        padding-bottom: 40px;
-        /* margin: auto; */
-    }
+	.hc-left {
+		display: inline-block;
+		width: 30%;
+		text-align: left;
+	}
+
+	.header-headline {
+		text-align: left;
+	}
+
+	.header-running-text {
+		text-align: left;
+		line-height: 1.5;
+		padding-right: 60px;
+		padding-bottom: 40px;
+		/* margin: auto; */
+	}
 }
