--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -20,8 +20,8 @@ body {
     padding-top: 20px
 }
 
-h1 {
-    color: #111111;
+h1 b {
+    color: #eeeeee;
     text-align: center;
     font-size: 60px;
 }
