--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -294,7 +294,7 @@ body {
 	padding-top: 60px;
 	padding-bottom: 40px;
 	min-width: 60%;
-	background: white;
+	/* background: white; */
 }
 
 .macbook {
@@ -580,6 +580,10 @@ ul {
 		line-height: 1.5;
 		margin-bottom: 40px;
 	}
+}
+
+.align-right {
+    float: right;
 }
 
 @media only screen and (min-width: 768px) {
