--- a/assets/css/blogpost.css
+++ b/assets/css/blogpost.css
@@ -21,27 +21,44 @@
 h1.title {
     text-align: center;
     font-family: "Times New Roman", Times, serif;
+    font-size: 3em;
 }
 
 h3 {
     font-family: "Times New Roman", Times, serif;
-    font-size: xx-large;
-}
-
-p.authortext {
+    font-size: 1.6em;
+    line-height: 50px;
     text-align: center;
-    font-size: small;
+    font-weight: bold;
 }
 
-p.quote {
+.blogpost-text-container p.authortext {
+    text-align: center;
+    font-size: medium;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+	text-transform: uppercase;
+}
+
+.blogpost-text-container p.foreword {
+    text-align: center;
+    font-size: medium;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: grey;
-    /* text-decoration: underline; */
-    margin: 2% 10%;
-    font-size: larger;
 }
 
-p {
-    line-height: 2;
+blockquote {
+    color: grey;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin: 2% 6%;
+    font-size: 1.2em;
+    line-height: 1.6em;
+}
+
+.blogpost-text-container p {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: large;
+    margin: 20px 0px;
+    line-height: 30px;
     text-align: justify;
 }
 
