--- a/assets/css/blogpost.css
+++ b/assets/css/blogpost.css
@@ -46,12 +46,16 @@ h3 {
     color: grey;
 }
 
-blockquote {
+.blogpost-text-container blockquote {
     color: grey;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 2% 6%;
     font-size: 1.2em;
     line-height: 1.6em;
+}
+
+.blogpost-text-container quote {
+    text-decoration: underline;
 }
 
 .blogpost-text-container p {
@@ -60,6 +64,11 @@ blockquote {
     margin: 20px 0px;
     line-height: 30px;
     text-align: justify;
+}
+
+.blogpost-text-container img {
+    object-fit: cover;
+    width: 100%;
 }
 
 img.blog-embed {
