Fix jam spelling and winner placement indicator

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -119,6 +119,11 @@ h2 {
     border-color: #d3d3d3;
 }
 
+.bronze {
+    background-color: #cd7f32;
+    border-color: #cd7f32;
+}
+
 a {
     color: #f1998e
 }
