--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -269,6 +269,13 @@ body {
 	background: rgb(243, 241, 241);
 }
 
+.white-section-content {
+	margin-top: 8px;
+	margin-bottom: 8px;
+	margin-left: 8px;
+	margin-right: 8px;
+}
+
 .white-section-text {
 	text-align: center;
 }
