Updated monster mash title image

--- a/assets/css/monstermash.css
+++ b/assets/css/monstermash.css
@@ -31,8 +31,10 @@ body {
 
 #menu-title {
     opacity: 0;
-    width: 1000;
-    height: 500;
+    margin-top: 80;
+    margin-bottom: 60;
+    width: 850;
+    height: 350;
     object-fit: cover;
 }
 
@@ -102,8 +104,8 @@ body {
     }
 
     #menu-title {
-        width: 600;
-        height: 650;
+        width: 400;
+        height: 350;
     }
 
     body {
@@ -118,7 +120,7 @@ body {
 
     #menu-title {
         width: 400;
-        height: 450;
+        height: 150;
     }
 
     body {
